ajustes em classe de teste e em script de email

--- a/src/main/resources/templates/bem_vindo_cliente.html
+++ b/src/main/resources/templates/bem_vindo_cliente.html
@@ -59,8 +59,8 @@
                         <td style="padding: 0 1.5em;">
                           <p>Prezado, <span th:text="${cliente.nomeCompleto} ?: ''"></span></p>
                           <p>Seu cadastro foi realizado com <b>sucesso</b>, seja bem-vindo ao nosso Projeto!</p>
-                          <p>Agora é muito mais fácil e seguro realizar pedidos, seja pelo computador ou celular.<br>
-                            Conheça nossos produtos e desfrute da melhor relação qualidade/preço do mercado!</p>
+                          <p>Agora é muito mais fácil aprender com a Start Info.<br>
+                            Explore nossos conteúdos e aproveite a melhor experiência em conhecimento e tecnologia!</p>
                         </td>
                     </tr>
                 </table>
